# Django-Server

./: README.md  db.sqlite3  pyproject.toml
account/: autherizations.py  middlewares.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
django_server/: settings.py  urls.py
djangodemo/: settings.py  urls.py
parent/: models.py  serializers.py  views.py
parent/migrations/: 0001_initial.py
student/: data.json  forms.py  models.py  serializers.py  settings.py  urls.py  views.py
student/migrations/: 0001_initial.py
students/: models.py  urls.py  views.py
students/migrations/: 0001_initial.py
tokens/: models.py
tokens/migrations/: 0001_initial.py
