[tool.poetry]
name = "server 2"
version = "0.1.0"
description = ""
authors = ["Ahmed El-Zahaby <ahmedelzahaby8122000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
